Mengubah nama salah satu UMKM dan menambahkan beberapa data umkm
Perubahan nama salah satu UMKM dan penambahan beberapa produk UMKM baru

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="row row-cols-1 row-cols-md-3 g-4 kuliner-category">
                     <div class="col">
                         <div class="card h-100">
-                            <img src="img/produk/Make Sans/Produk Make Sans.png" class="card-img-top" alt="...">
+                            <img src="img/produk/Dapur Maee/thumbnail.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="/produk/produk-dapur-maee.html">Dapur Maee</a></h5>
                                 <p class="card-text">
