Penambahan image produk penjahit bu SIti
Menambahkan image produk penjahit bu Siti

--- a/index.html
+++ b/index.html
@@ -330,13 +330,14 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="img/image-produk.png" class="card-img-top" alt="...">
+                                    <img src="img/produk/Bu Siti/Produk Bu Siti.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="/produk/produk-bu-siti.html">Penjahit Bu Siti</a></h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                            content. This content is a little bit longer.</p>
+                                        <h5 class="card-title"><a href="https://goo.gl/maps/Kgn1J8PTbeT3AAhQ7">Penjahit Bu Siti</a></h5>
+                                        <p class="card-text">
+                                            Menerima jasa menjahit pakaian baik untuk keperluan sekolah maupun pribadi.
+                                        </p>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-bu-siti.html">Lihat Produk</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="https://wa.me/6289525101606">Hubungi</a></button>
                                             </div>
                                         </div>
                                     </div>
